--- a/index.html
+++ b/index.html
@@ -324,20 +324,20 @@
 				</div>
 
 
-				<!-- EDIT: education line 2 
+				
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Environment Data Collection And Prediction of IOT System</t><br/>
+					<p><t>Environment Data Collection And Prediction of IoT System</t><br/>
 						<br/><i>
 							<ul>
 <li>Using NodeMCU (based on ESP8266, integrated with GPIO, PWM, IIC, WIFI, 1-Wire, and
 ADC) implemented a system programmed using "C" that would transfer measured data
 from the environment to the cloud then proceed to process the data using Machine
 learning algorithms in order to form predictions regarding the environment's future state.</li>
-<li>•Incorporated Humidity, temperature, Gas, an Optical sensor to collect data regarding the
+<li>•Incorporated Humidity, Temperature, Gas, and an Optical sensor to collect data regarding the
 system's environment</li>
-<li>Used MATLAB to organize and analyze data</li>
-<li>Processed the data using a ML algorithm implemented on MATLAB and successfully
-made predictions regarding the environment's status at a given time in the future.</li>
+<li>Used MATLAB to Import ,Process and Analyze data</li>
+<li>Processed the data using a Machine Learning algorithm implemented on MATLAB and 
+made predictions regarding the environment's status at a given time.</li>
 </ul>
 </i>
 					</p>
@@ -345,7 +345,7 @@ made predictions regarding the environment's status at a given time in the futur
 				<div class="col-lg-3">
 					<p style="font-size:13px;">Jan 2018- Mar 2018<br/>
 				</p>
-				</div>-->
+				</div>
 
 	<!-- EDIT: education line 2 -->
 				<div class="col-lg-6 col-lg-offset-3">
@@ -576,6 +576,8 @@ parcel receiving procedure.</li>
                   <li>Kibana</li>
                   <li>Apache Kafka</li>
                   <li>CMake</li>
+                  <li>TensorFlow</li>
+                  <li>Torch</li>
                 </ul>
                 </ul>
               </div>
